packages/fortifier-macros/tests/validations/regex/unknown_fail.stderr
error: unknown parameter
 --> tests/validations/regex/unknown_fail.rs:5:22
  |
5 |     #[validate(regex(unknown))]
  |                      ^^^^^^^
